--- a/logical-page-behaviors.html
+++ b/logical-page-behaviors.html
@@ -1,6 +1,5 @@
 <link rel="import" href="logical-base-behavior.html">
-<link rel="import" href="logical-list-behavior.html">
 <link rel="import" href="logical-page-behavior.html">
 <script>
-Polymer.LogicalPageBehaviors = [ Polymer.LogicalBaseBehavior,  Polymer.LogicalListBehavior, Polymer.LogicalPageBehavior ];
+Polymer.LogicalPageBehaviors = [ Polymer.LogicalBaseBehavior, Polymer.LogicalPageBehavior ];
 </script>
