--- a/logical-base-behavior.html
+++ b/logical-base-behavior.html
@@ -29,7 +29,7 @@ Polymer.LogicalBaseBehavior = {
 		this.set(path, dec);
 	},
 	_empty: function() {
-		return arguments[0].length == 0;
+		return !arguments[0] || arguments[0].length == 0;
 	},
 
 	_focusID: function(id) {
@@ -54,22 +54,64 @@ Polymer.LogicalBaseBehavior = {
 		this.set(path, inc);
 	},
 
-	// true if in array
+	// true if any arg(n) = arg(n+1)
 	_isa: function() {
-		var path = arguments[1];
-		var needle = arguments[2];
-		return arguments[0][path] && arguments[0][path].indexOf(needle) > -1;			
+		if(arguments.length % 2 != 0) {
+			console.log("ERROR! odd number of arguments!");
+			return false;
+		}
+
+		for (var i = 0; i < arguments.length; i+=2) {
+			if(arguments[i] == arguments[i + 1])
+				return true;
+		};
+
+		return false;
 	},
 	
 	
-	// returns true if arg1 does not equal arg2
+	// true if ALL arg(n) = arg(n+1)
+	_isA: function() {
+		if(arguments.length % 2 != 0) {
+			console.log("ERROR! odd number of arguments!");
+			return false;
+		}
+
+		for (var i = 0; i < arguments.length; i+=2) {
+			if(arguments[i] != arguments[i + 1])
+				return false;
+		};
+
+		return true;
+	},
+	
+	
+	// true if any arguements equeal arg0
 	_is: function() {
 
-		if(arguments.length == 2) {
-			return arguments[0] == arguments[1];
-		} else if(arguments.length == 3) {
-			return arguments[0] == arguments[1] || arguments[0] == arguments[2];
-		}
+		for (var i = 1; i < arguments.length; i++) {
+			if(arguments[0] == arguments[i])
+				return true;
+		};
+
+		return false;
+	},
+
+	// is greater than
+	_isgt: function() {
+
+		return Number(arguments[0]) > Number(arguments[1]);
+	},
+
+	// is less than
+	_islt: function() {
+
+		return Number(arguments[0]) < Number(arguments[1]);
+	},
+	// is between
+	_isb: function() {
+	
+		return Number(arguments[0]) <= Number(arguments[2]) && Number(arguments[0]) >= Number(arguments[1]);
 	},
 
 	// true if path (arg1) of arg0 equals arg2
@@ -99,47 +141,64 @@ Polymer.LogicalBaseBehavior = {
 		}
 		return args.join('');
 	},
-	// returns true if arg0 == arg1
-	equals: function() {
-		return arguments[0] == arguments[1];
-	},
-	// if true returns arg1 else arg2
-	ifthen: function() {
-		console.log("IF THEN CALLED!!");
-		this._if(arguments);
-	},
 	_if: function() {
-		var g = arguments[0] ? arguments[1] : arguments[2];
-		console.log("g",g); 
-		return arguments[0] ? arguments[1] : arguments[2];
+		return arguments[0] == arguments[1] ? arguments[2] : arguments[3];
 	},
 	// returns the length of something
 	lengthof: function() {
 		return arguments[0].length;
 	},
 	_focus: function( element ) {
-		console.log("focusing",element.tagName.toLowerCase());
+
+		var input,
+				highlight,
+				isMenu,
+				isDate;
+
 		switch(element.tagName.toLowerCase()) {
 			case 'paper-input':
-				// open a calendar
-				if(element.type == 'date') {
-					this.async(function(){
-						var ev = document.createEvent('KeyboardEvent');
-						ev.initKeyboardEvent('keydown', true, true, document.defaultView, 'F4', 0);
-						element.$.input.dispatchEvent(ev);
-					},250);
-				}
+			case 'gold-phone-input':
+				input = element.$.input;
+				if(element.type == 'date') isDate = true;
+			break;
 			case 'paper-textarea':
-				element.$.input.focus();
+				input = element.$.input.$.textarea;
 			break;
 			case 'paper-dropdown-menu':
-				element.open();
+				input = element;
+				isMenu = true;
 			break;
 			default:
-				element.focus();
-			break;
+				input = element;
 		}
+
+		if(isMenu) {
+			input.open();
+		} else if(isDate) {
+			this.async(function(){
+				var ev = document.createEvent('KeyboardEvent');
+				ev.initKeyboardEvent('keydown', true, true, document.defaultView, 'F4', 0);
+				input.dispatchEvent(ev);
+			},250);
+		} else {
+			input.focus();
+		}
+
+		if(element.getAttribute('auto-highlight') != undefined) {
+			input.select();
+		}
+
 	},
+
+	_ms: function() {
+
+		var v = Number(arguments[0]);	
+		for (var i = 1; i < arguments.length; i++) {
+			v = v - Number(arguments[i]);
+		};
+		return v;
+	},
+	
 	_preventDefault: function() {
 		event.preventDefault();
 	},
@@ -162,10 +221,16 @@ Polymer.LogicalBaseBehavior = {
 		var target = this._data('path', 1);
 		var path = target.dataset.path;
 		var val = target.dataset.val == 'true' ? true : target.dataset.val == 'false' ? false : target.dataset.val;
-
 		this.set(path, val);
+
+		if(target.dataset.secondpath) {
+			this.set(target.dataset.secondpath, val);
+		}
+
+		if(this._data('closeme'))
+			this.dialogClose();
 	},
-	_stoppropagation: function() {
+	_stopPropagation: function() {
 	
 		event.stopPropagation();
 	},
@@ -252,11 +317,13 @@ Polymer.LogicalBaseBehavior = {
 			var level = pathArray[i];
 			obj = obj[level]
 		};
+
 		if(!obj || obj == 0) {
-			var bool = true;
+			var bool = 1;
 		} else {
-			var bool = false;
+			var bool = 0;
 		}
+
 		this.set(path, bool);
 	},
 	
