--- a/logical-page-animation-behavior.html
+++ b/logical-page-animation-behavior.html
@@ -42,6 +42,11 @@ Polymer.LogicalPageAnimationBehaviorImpl = {
 		'neon-animation-finish': 'animationComplete'
 	},
 
+	created: function() {
+	
+		this.style.opacity = 0;
+	},
+	
 
 	// Sets style/attribute once animation is complete
 	animationComplete: function() {
