--- a/logical-page-misc-behavior.html
+++ b/logical-page-misc-behavior.html
@@ -9,11 +9,24 @@ Logical Page Misc Behavior
 <script>
 Polymer.LogicalPageMiscBehavior = {
 
+	_copy: function(obj) {
+		return JSON.parse(JSON.stringify(obj));
+	},
+	
+
 	// pass jaxson request to LogicalApp's jaxson function
 	jaxson: function(url, params) {
 
 		LogicalApp.jaxson(url, params, this);
 	},
+
+	PageLink: function(event) {
+	
+		event.preventDefault();
+		var url = event.target.href.substring(window.location.origin.length);
+		LogicalApp.PageURL = url;
+	},
+	
 
 
 
